Visible sprite parts in column "Role" in "Timesheet" page fix #131

--- a/frontend/timesheet/timesheet.scss
+++ b/frontend/timesheet/timesheet.scss
@@ -50,6 +50,11 @@
                 min-width: 155px;
             }
 
+            &:nth-child(2){
+                width: 210px;
+                min-width: 210px;
+            }
+
             &:nth-child(3){
                 width: 90px;
                 text-align: center;
